fix date picker being too small on some weeks in the calendar week view

--- a/app/ui/DateHeader.styl
+++ b/app/ui/DateHeader.styl
@@ -30,3 +30,4 @@
 			background: none
 			padding-top: 2px
 			padding-bottom: 2px
+			width: 235px
